<resources>
    <string name="app_name">Shopping_List</string>
    <string name="action_settings">Settings</string>
    <string name="produtos_a_adquirir">Products to Acquire</string>
    <string name="dinheiro_gasto">Money spent</string>
    <string name="compras_efetuadas">Purchases</string>
    <string name="introduzir_nome_do_produto">Insert Name of the product</string>
    <string name="introduzir_dados_dos_produtos_a_adquirir">Insert data of the products to purchase</string>
    <string name="introduzir_quantidade">Insert Quantity</string>
    <string name="title_activity_produtos_adquirir">Produtos_adquirir</string>
    <string name="title_activity_botao_carregado">BotaoCarregado</string>
    <string name="lista_de_produtos_a_adquirir">List of products to acquire</string>
    <string name="eliminar">Delete</string>
    <string name="alterar">Modify</string>
    <string name="inserir">Insert</string>
    <string name="lista_das_compras_ja_efetuadas">List of the purchases already done</string>
    <string name="title_activity_dinheiro_gasto">Dinheiro_gasto</string>
    <string name="dinheiro_gasto_ate_ao_momento">Money spent till now</string>
    <string name="title_activity_inserir_lista_produtos">Inserir_lista_produtos</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="title_activity_inserir_compras_efetuadas">inserir_compras_efetuadas</string>
    <string name="title_activity_inserir_dinheiro_gasto">inserir_dinheiro_gasto</string>
    <string name="title_activity_alterar_lista_produtos">alterar_lista_produtos</string>
    <string name="introduzir_nome_do_produto_a_alterar">Insert name of the prodcut to modify</string>
    <string name="introduzir_quantidade_a_alterar">Insert Quantity to modify</string>
    <string name="title_activity_alterar_compras_efetuadas">alterar_compras_efetuadas</string>
    <string name="title_activity_alterar_dinheiro_gasto">alterar_dinheiro_gasto</string>
    <string name="introduzir_data_a_alterar">Insert Data to modify</string>
    <string name="introduzir_montante_a_alterar">Insert amount of money to modify</string>
    <string name="title_activity_eliminar_lista_produtos">eliminar_lista_produtos</string>
    <string name="bolachas">Cookies</string>
    <string name="arroz">Rice</string>
    <string name="cereais">Cereals</string>
    <string name="title_activity_eliminar_compras_efetuadas">eliminar_compras_efetuadas</string>
    <string name="bananas">Bananas</string>
    <string name="salsichas">Sausages</string>
    <string name="frango">Chicken</string>
    <string name="title_activity_eliminar_dinheiro_gasto">eliminar_dinheiro_gasto</string>
    <string name="inserir_data">Insert Data</string>
    <string name="inserir_montante_gasto">Insert Money Spent</string>
    <string name="lista_de_compras">Shopping List</string>
    <string name="introduzir_nome_do_produtos">Introduzir Nome do Produto</string>
    <string name="introduzir_categoria">Introduzir Categoria</string>
    <string name="introduzir_quantidades">Introduzir Quantidade</string>
    <string name="introduzir_nome_da_categoria">Introduzir Nome da Categoria</string>
    <string name="introduzir_tipo_de_produto">Introduzir Tipo de produto</string>
    <string name="nome_da_categoria">Nome_da_categoria</string>
    <string name="tipo_de_produto">Tipo_de_produto</string>
    <string name="cereais_e_derivados">Cereais e derivados</string>
    <string name="iogurtes">Iogurtes</string>
    <string name="nome_do_produto">Nome_do_produto</string>
    <string name="azeite">Azeite</string>
    <string name="quantidade">Quantidade</string>
    <string name="_2">2</string>
    <string name="categoria">Categoria</string>
    <string name="leos_azeites_e_outros">Òleos, azeites e outros</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="eliminars">Eliminar</string>
    <string name="sair">Sair</string>
    <string name="eliminarz">Eliminar</string>
    <string name="cancelare">Cancelar</string>
    <string name="guardare">Guardar</string>
    <string name="introduzir_montante_gasto">Introduzir montante gasto</string>
    <string name="introduzir_dia_da_semana">Introduzir dia da semana</string>
    <string name="dia_da_semana">Dia da semana</string>
    <string name="quarta_feira">Quarta-feira</string>
    <string name="montante_gasto">Montante gasto</string>
    <string name="_32">32</string>
</resources>
