<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Inserir_alterar_eliminar.eliminar_lista_produtos"
    tools:showIn="@layout/activity_eliminar_lista_produtos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome_do_produto"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textViewEliminar_nome_do_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/azeite"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantidade"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textViewEliminar_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/introduzir_categoria"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textViewEliminar_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/leos_azeites_e_outros"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp" />
</LinearLayout>