<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Inserir_alterar_eliminar.eliminar_compras_efetuadas"
    tools:showIn="@layout/activity_eliminar_compras_efetuadas">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome_da_categoria"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="8dp" />


    <TextView
        android:id="@+id/textViewEliminarDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cereais_e_derivados"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tipo_de_produto"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textViewEliminar_Montante_gasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/iogurtes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="8dp" />

</LinearLayout>